[gd_scene load_steps=8 format=3 uid="uid://btvexc5basrhj"]

[ext_resource type="PackedScene" uid="uid://nhje3kkwdi25" path="res://assets/item-display/item_display_base.glb" id="1_5v2rh"]
[ext_resource type="Script" path="res://components/item-display/item_display.gd" id="1_cbrte"]
[ext_resource type="PackedScene" uid="uid://b6f3sd2l0ky4d" path="res://assets/item-display/item_display_lid.glb" id="2_pfyig"]
[ext_resource type="PackedScene" uid="uid://ckqnh60a5tsjb" path="res://components/object-layout/object_layout.tscn" id="3_2uk8n"]

[sub_resource type="Animation" id="Animation_12q0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.26392, 0)]
}

[sub_resource type="Animation" id="Animation_64470"]
resource_name = "opening"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.26392, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fw3cj"]
_data = {
"RESET": SubResource("Animation_12q0x"),
"opening": SubResource("Animation_64470")
}

[node name="ItemDisplay" type="Node3D"]
script = ExtResource("1_cbrte")

[node name="item_display_base" parent="." instance=ExtResource("1_5v2rh")]

[node name="ObjectPositionOnItemDisplay" type="Marker3D" parent="item_display_base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08235, 0)

[node name="ObjectLayout" parent="item_display_base/ObjectPositionOnItemDisplay" instance=ExtResource("3_2uk8n")]

[node name="item_display_lid" parent="." instance=ExtResource("2_pfyig")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26392, 0)

[node name="LidMovement" type="AnimationPlayer" parent="item_display_lid"]
libraries = {
"": SubResource("AnimationLibrary_fw3cj")
}

[node name="Timer" type="Timer" parent="item_display_lid"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="item_display_lid/Timer" to="." method="_on_timer_timeout"]
